--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/introduction"]
 	path = themes/introduction
-	url = https:/github.com:davidski/hugo-theme-introduction.git
+	url = https://github.com:davidski/hugo-theme-introduction.git
