--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ branches:
   only:
   - master
 install:
-- go get -tags 'extended' github.com/gohugoio/hugo
+- go get -d -v github.com/gohugoio/hugo@v0.54.0
+- go build -o hugo -tags 'extended' github.com/gohugoio/hugo
 - npm install -g autoprefixer
 - npm install -g postcss-cli
 - rm -rf public || exit 0
