--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ branches:
   only:
   - master
 install:
-- go get github.com/gohugoio/hugo
+#- go get github.com/gohugoio/hugo
 #- go get -d -v github.com/gohugoio/hugo@v0.54.0
 #- go build -o hugo -tags 'extended' github.com/gohugoio/hugo
+- wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.54/hugo_0.54_Linux-64bit.deb
+- sudo dpkg -i /tmp/hugo.deb
 - npm install -g autoprefixer
 - npm install -g postcss-cli
 - rm -rf public || exit 0
