--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,20 @@ branches:
   only:
   - master
 install:
+#- go get gopkg.in/gohugoio/hugo.v.54.0
 #- go get github.com/gohugoio/hugo
 #- go get -d -v github.com/gohugoio/hugo@v0.54.0
 #- go build -o hugo -tags 'extended' github.com/gohugoio/hugo
-- wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.54.0/hugo_extended_0.54.0_Linux-64bit.deb
-- sudo dpkg -i /tmp/hugo.deb
+#- wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.54.0/hugo_extended_0.54.0_Linux-64bit.deb
+#- sudo dpkg -i /tmp/hugo.deb
+- wget -O /tmp https://github.com/gohugoio/hugo/releases/download/v0.54.0/hugo_extended_0.54.0_Linux-64bit.tar.gz
+- tar -xzf /tmp/hugo_extended_0.54.0_Linux-64bit.tar.gz -C /tmp
 - npm install -g autoprefixer
 - npm install -g postcss-cli
 - rm -rf public || exit 0
 script:
-- hugo version
-- hugo
+- /tmp/hugo version
+- /tmp/hugo
 deploy:
   provider: s3
   local-dir: public
