Still won't work, but use extended channel

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ branches:
   - master
 install:
 #- go get gopkg.in/gohugoio/hugo.v.54.0
-- go get github.com/gohugoio/hugo
+- go get -tags 'extended' github.com/gohugoio/hugo
 #- go get -d -v github.com/gohugoio/hugo@v0.54.0
 #- go build -o hugo -tags 'extended' github.com/gohugoio/hugo
 #- wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.54.0/hugo_extended_0.54.0_Linux-64bit.deb
