--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,12 @@
-language: go
 branches:
   only:
   - master
+env:
+  - HUGO_VERSION="0.54.0"
 install:
-#- go get gopkg.in/gohugoio/hugo.v.54.0
-- go get -tags 'extended' github.com/gohugoio/hugo
-#- go get -d -v github.com/gohugoio/hugo@v0.54.0
-#- go build -o hugo -tags 'extended' github.com/gohugoio/hugo
-#- wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.54.0/hugo_extended_0.54.0_Linux-64bit.deb
-#- sudo dpkg -i /tmp/hugo.deb
-#- wget -O /tmp/hugo.tar.gz https://github.com/gohugoio/hugo/releases/download/v0.54.0/hugo_extended_0.54.0_Linux-64bit.tar.gz
-#- tar -xzf /tmp/hugo.tar.gz -C /tmp
-#- git clone https://github.com/gohugoio/hugo.git
-#- cd hugo
-#- git checkout v0.54.0
-#- go install
+- wget -q https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
+- tar xf hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
+- mv hugo ~/bin/
 - npm install -g autoprefixer
 - npm install -g postcss-cli
 - rm -rf public || exit 0
