Install NPM dependencies on build.

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -21,6 +21,11 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
+      - name: Install NPM dependencies
+        run: |
+          npm install -g autoprefixer
+          npm install -g postcss-cli
+
       - name: Build
         run: hugo --minify
 
