--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Install NPM dependencies
         run: |
-          npm install -g autoprefixer
-          npm install -g postcss-cli
+          npm install autoprefixer
+          npm install postcss-cli
 
       - name: Build
         run: hugo --minify
