--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -36,7 +36,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
-      - name: Copy files to the test website with the AWS CLI
+      - name: Copy files to the production site with the AWS CLI
         run: |
           aws s3 cp --recursive public s3://${{ secrets.DEPLOY_BUCKET }}/
-          #aws s3 sync . s3://my-s3-test-website-bucket
+
