--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,16 @@ DefaultContentLanguage      = "en"                         # languageCode
 # disqusshortname           = ""                           # Enable Disqus for comments https://gohugo.io/content-management/comments
 # googleAnalytics           = ""                           # Enable Google Analytics https://gohugo.io/templates/internal/#google-analytics
 
+[markup.highlight]
+    codeFences = true
+    guessSyntax = false
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = true
+    # For styles, see https://xyproto.github.io/splash/docs/longer/all.html
+    style = "github"
+    tabWidth = 4
+
 [params]
     themeStyle              = "light"                      # Choose 'light' or 'dark'
     favicon                 = "/img/fav.ico"
