--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -7,6 +7,10 @@ on:
       - master  # Set a branch to deploy
       - main  # Set a branch to deploy
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -33,8 +37,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-session-name: ${{ secrets.AWS_SESSION_NAME }}
           aws-region: us-west-2
 
       - name: Copy files to the production site with the AWS CLI
